--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
 				</li>
 			</ul>
 		</div>
+		
+		<footer>
+		<a href="https://asktami.github.io/">Return to GitHub</a>
+		</footer>
 
 		<!-- jQuery CDN -->
 		<script
