--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		</div>
 		
 		<footer>
-		<a href="https://asktami.github.io/">Return to GitHub</a>
+		<a href="https://github.com/asktami/shopping-list">Return to GitHub</a>
 		</footer>
 
 		<!-- jQuery CDN -->
